manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: redis
  name: redis
  # annotations:
  #   kubernetes.io/ingress.class: nginx
  #   nginx.ingress.kubernetes.io/affinity: cookie
  #   #nginx.ingress.kubernetes.io/affinity-mode: persistent
  #   nginx.ingress.kubernetes.io/session-cookie-expires: '172900'
  #   nginx.ingress.kubernetes.io/session-cookie-max-age: '172900'
  #   nginx.ingress.kubernetes.io/session-cookie-name: route
  #   nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
# status:
#   loadBalancer:
#     ingress:
#       - ip: 127.0.0.1
spec:
  rules:
    - host: redis.beebuddy.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis
                port:
                  number: 6379
